--- a/dotfiles/ack/.ackrc
+++ b/dotfiles/ack/.ackrc
@@ -1,1 +1,15 @@
 --ignore-dir=.sass-cache
+
+# lexically sort filenames
+--sort-files
+
+--type-add=ruby=rake,haml
+--type-add=vim=vimrc
+--type-add=js=json
+--type-set=cucumber=feature
+--type-set=css=sass
+
+# add types ack doesn't know about
+--type-set=MARKDOWN=md,mkd,markdown
+--type-set=RDOC=rdoc
+--type-set=slim=slim
