--- a/configuration/boxen/hiera/users/welldan97.yaml
+++ b/configuration/boxen/hiera/users/welldan97.yaml
@@ -1,1 +1,6 @@
+"ruby::rbenv::plugins":
+  "rbenv-bundler":
+    "ensure": "0.99"
+    "source": "carsomyr/rbenv-bundler"
+
 "nodejs::build::ensure": 'c5fac71ef20a85841c7fd76f751ed11e2f8625ec' 
